# mini-json-summarizer

./: .env  .gitignore  CONTRIBUTING.md  Dockerfile  PRD.md  README.md  edge_cases.sh  edge_cases_strict.sh  incident_profile_test.sh  load_smoke.sh  mega_test.sh  pyproject.toml  test_suite.sh
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes.py  schemas.py
app/profiles/: __init__.py  engine.py  extractors.py  loader.py  models.py  precedence.py
app/summarizer/: __init__.py  json_path.py  models.py  redaction.py  service.py
app/summarizer/engines/: __init__.py  base.py  deterministic.py  llm.py
docs/: PROFILES.md  index.html
examples/: README.md
examples/live-dashboard/: .env.example  .gitignore  README.md  docker-compose.yml
examples/live-dashboard/app/api-service/: service.py
examples/live-dashboard/app/auth-service/: Dockerfile  service.py
examples/live-dashboard/app/worker-service/: requirements.txt  (+1 more)
examples/live-dashboard/dashboard/: app.js  index.html
examples/live-dashboard/ecommerce/: app.js  index.html
examples/live-dashboard/ecommerce-api/: Dockerfile  server.py
examples/live-dashboard/log-aggregator/: Dockerfile  server.py
examples/live-dashboard/log-viewer/: app.js  index.html
examples/live-dashboard/monitoring/: app.js  index.html
examples/live-dashboard/scripts/: generate-incidents.sh  load-test.sh
examples/live-dashboard/traffic-generator/: Dockerfile  generator.py
incident_artifacts/: incident_stream.sse  pre_out.json
profiles/: logs.yaml  metrics.yaml  policy.yaml
tests/: __init__.py  conftest.py  test_api.py  test_deterministic_engine.py  test_profiles.py
(+1 files in other folders)
