[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "mini-json-summarizer"
version = "1.0.0"
description = "Service for deterministic summarization and chat refinement over JSON payloads."
authors = [{name = "Mini Chatbot Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "orjson>=3.9.15",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "jsonschema>=4.21.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27.0",
    "anyio>=4.2.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.anyio]
backends = ["asyncio"]
